--- a/assets/css/MainPage.css
+++ b/assets/css/MainPage.css
@@ -10,13 +10,9 @@ body {
 
 .top-bar {
   background-color: #1a1a1d;
-  height: 8vh;
-}
-
-.top-bar > div {
+  height: 50px;
   color: white;
-  /* border: 2px solid yellow; */
-  font-size: 35px;
+  font-size: 2rem;
 }
 
 .login-box {
@@ -26,6 +22,26 @@ body {
   margin-top: 5%;
 }
 
+.main-container {
+  margin-top: 2%;
+}
+
+.label {
+  font-size: 30px;
+  font-weight: 700;
+  color: black;
+}
+
+::-webkit-input-placeholder {
+  /* Chrome/Opera/Safari */
+  font-size: 20px;
+  font-weight: 600;
+}
+
+textarea:focus {
+  border: 2px solid teal;
+}
+
 @media screen and (max-width: 400px) {
   .login-box {
     height: 70vh;
@@ -33,9 +49,14 @@ body {
     margin-left: 5%;
   }
 
-  .top-bar > div {
-    color: white;
-    font-size: 15px;
-    /* border: 2px solid yellow; */
+  .top-bar {
+    height: 50px;
+    font-size: 25px;
+  }
+}
+
+@media screen and (max-width: 640px) {
+  .label {
+    font-size: 20px;
   }
 }
