--- a/assets/css/MainPage.css
+++ b/assets/css/MainPage.css
@@ -42,6 +42,10 @@ textarea:focus {
   border: 2px solid teal;
 }
 
+#modal3 {
+  top: 30% !important;
+}
+
 @media screen and (max-width: 400px) {
   .login-box {
     height: 70vh;
@@ -58,5 +62,28 @@ textarea:focus {
 @media screen and (max-width: 640px) {
   .label {
     font-size: 20px;
+  }
+}
+
+@media screen and (min-width: 640px) {
+  /* Let's get this party started */
+  ::-webkit-scrollbar {
+    width: 5px;
+    height: 5px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    /* -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    -webkit-border-radius: 50px;
+    border-radius: 50px;
+    background: lightgrey;
+    -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
   }
 }
