font-size improved for card content

--- a/assets/css/MainPage.css
+++ b/assets/css/MainPage.css
@@ -58,6 +58,12 @@ textarea:focus {
   float: right;
 }
 
+.card-content {
+  max-height: 250px !important;
+  overflow-y: auto;
+  text-align: justify;
+}
+
 @media screen and (max-width: 400px) {
   .login-box {
     height: 70vh;
