--- a/assets/css/MainPage.css
+++ b/assets/css/MainPage.css
@@ -86,20 +86,46 @@ textarea:focus {
   }
 }
 
+.card-main-row {
+  margin-left: 0px !important;
+  margin-right: 0px !important;
+}
+
+.card-content-data {
+  padding: 24px !important;
+  border: 1px solid darkgrey;
+  border-left: 0px;
+  border-right: 0px;
+  font-size: 28px;
+  font-weight: 400;
+  text-transform: capitalize !important;
+}
+
+/* For small devices */
 @media screen and (max-width: 640px) {
   .label {
     font-size: 20px;
   }
+
   .chip {
     min-height: 32px !important;
     height: auto !important;
     float: left;
     margin-top: 10px;
   }
+
+  .card-content-data {
+    padding: 24px !important;
+    border: 1px solid darkgrey;
+    border-left: 0px;
+    border-right: 0px;
+    font-size: 20px;
+    font-weight: 400;
+  }
 }
 
+/* For medium and large devices */
 @media screen and (min-width: 640px) {
-  /* Let's get this party started */
   ::-webkit-scrollbar {
     width: 5px;
     height: 5px;
@@ -118,5 +144,12 @@ textarea:focus {
     border-radius: 50px;
     background: lightgrey;
     -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
+  }
+}
+
+/* for mobile devices with varying size*/
+@media screen and (min-width: 601px) and (max-width: 750px) {
+  .view-profile-card-footer {
+    padding: 5px !important;
   }
 }
