basic todo structure created | added basic functionalities

--- a/assets/css/MainPage.css
+++ b/assets/css/MainPage.css
@@ -61,6 +61,7 @@ textarea:focus {
 #dropdown2[style],
 #dropdown3[style] {
     width: 228px !important;
+    height: 250px !important;
 }
 
 @media screen and (max-width: 400px) {
