--- a/todoapp/assets/css/todoapp.css
+++ b/todoapp/assets/css/todoapp.css
@@ -72,6 +72,10 @@
     /* white-space: pre-wrap !important; */
 }
 
+.card-panel {
+    background-color: #916 !important;
+}
+
 @media screen and (min-width: 640px) {
      ::-webkit-scrollbar {
         width: 5px;
