--- a/assets/css/MainPage.css
+++ b/assets/css/MainPage.css
@@ -64,6 +64,12 @@ textarea:focus {
     height: 250px !important;
 }
 
+.profile-img {
+    width: 150px;
+    height: 150px;
+    border-radius: 50%;
+}
+
 @media screen and (max-width: 400px) {
     .login-box {
         height: 70vh;
@@ -73,6 +79,11 @@ textarea:focus {
     .top-bar {
         height: 50px;
         font-size: 25px;
+    }
+    .profile-img {
+        width: 100px;
+        height: 100px;
+        border-radius: 50%;
     }
 }
 
