--- a/todoapp/assets/css/todoapp.css
+++ b/todoapp/assets/css/todoapp.css
@@ -95,3 +95,13 @@
         -webkit-box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.5);
     }
 }
+
+.profile-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+}
+
+.status {
+    padding-left: 10px;
+}
